[gd_scene load_steps=3 format=3 uid="uid://cgqw1w6vyrphj_new"]

[ext_resource type="Script" path="res://SampleProject/Scripts/Menus/Game/metsys_map_component.gd" id="1_metsys_map"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.8)

[node name="MetSysMapComponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_metsys_map")

[node name="TopDraw" type="Control" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PercentLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 33.0
text = "0%"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="InfoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -33.0
offset_right = 300.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Use arrow keys to navigate the map"
